--- a/Create-post-page/index.html
+++ b/Create-post-page/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
     <script src="https://kit.fontawesome.com/11e3e6af90.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylenew.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
